# kube-cost-lite

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  styles.css
deploy/: cronjob.yaml  example-workloads.yaml
src/kube_cost_lite/: cli.py  config.py  cost_model.py  k8s_client.py  metrics.py  report.py  server.py
tests/: test_cost_model.py  test_grouping.py
